--- a/style.css
+++ b/style.css
@@ -2,19 +2,76 @@ body {
     background-image: url(./imgs/bg.JPG);
     background-size: cover;
     background-repeat: no-repeat;
-    margin-left: 0%;
-    margin-right: 0%;
-    margin-top: 0%;
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+    color: rgb(230, 230, 230);
+}
+
+body::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: -1;
 }
 
 header {
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.75);
+}
+
+section {
+    text-align: center;
+    margin-top: 20%;
+}
+
+button {
+    background-color: orangered;
+    border-width: 0px;
+    color: rgb(230, 230, 230);
+}
+
+.mt {
+    font-size: 110px;
+    font-weight: bolder;
 }
 
 .ht {
     margin-left: 5%;
+    font-size: 30px;
+    font-weight: 900;
 }
 
 .sButton {
-    margin-left: 60%;
+    float: right;
+    text-align: right;
+    margin-right: 5%;
+    margin-top: 0.5%;
+}
+
+.ot {
+    color: orangered;
+}
+
+.st {
+    font-weight: bold;
+}
+
+a {
+    color: rgb(230, 230, 230);
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+a:hover {
+    color: orangered;
+}
+
+section button {
+    width: 17%;
+    height: 30px;
+    font-size: large;
 }
